# soda-opt

./: .gitignore  LOOP_PIPELINING.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.devcontainers/: Dockerfile  devcontainer.json
.github/workflows/: buildAndTest.yml  main.yml
build_tools/: build_soda.sh  download_llvm.sh
docs/tutorials/: README.md
docs/tutorials/hpca2023/: README.md
docs/tutorials/isc2023/: README.md
docs/tutorials/naml2022/scripts/: tosa-to-linalg.sh
docs/tutorials/pytaco/: README.md  SpMVMul.py  configure.sh  everything.sh  perf.py
docs/tutorials/pytaco/tensors/: M16.tns  expected_result.tns
docs/tutorials/pytorch/: README.md
docs/tutorials/pytorch/lowering/: README.md
docs/tutorials/pytorch/matmul_accel_gen/: README.md
docs/tutorials/tensorflow/: .gitignore  README.md
docs/tutorials/tensorflow/docker-version/: tutorial.ipynb
docs/tutorials/tensorflow/docker-version-executed/: .gitignore  tutorial.ipynb
experiments/: .gitignore
include/soda/: CMakeLists.txt  InitUpstreamDialects.h
include/soda/Analysis/: DataFlowGraph.h
include/soda/Conversion/: Passes.h  Passes.td
include/soda/Conversion/AccelToRuntime/: AccelToAXI4MLIR.h
include/soda/Conversion/CustomFuncToLLVM/: ConvertCustomFuncToLLVMPass.h
include/soda/Conversion/KernelsToSODA/: LinalgToSODA.h  OperationToSODA.h  SCFToSODA.h
include/soda/Conversion/LinalgToAccel/: AXI4MLIRUtils.h  LinalgGenericToAccel.h
include/soda/Dialect/: CMakeLists.txt
include/soda/Dialect/Affine/: Passes.h
include/soda/Dialect/Linalg/: CMakeLists.txt  Passes.h  Passes.td
include/soda/Dialect/Linalg/Reports/: CMakeLists.txt  Passes.h  Passes.td
include/soda/Dialect/Linalg/Transforms/: Passes.h  Passes.td
include/soda/Dialect/SODA/: Passes.td  SODABase.td  SODADialect.h  SODAOps.td  Utils.h
include/soda/Dialect/Transform/: CMakeLists.txt
include/soda/ExecutionEngine/: SODARunnerExtensions.h
include/soda/ExecutionEngine/axi/: AxiUtils.h  api_v0.h  api_v1.h  api_v2.h
include/soda/Misc/: CMakeLists.txt  Passes.h  Passes.td  Pipelines.h
include/soda/Transforms/: ForwardResults.h  IfConversion.h  LoopSchedule.h  LoopScheduleBuilder.h  SchedulingUtils.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  DataFlowGraph.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/AccelToRuntime/: AccelToAXI4MLIR.cpp  CMakeLists.txt
lib/Conversion/CustomFuncToLLVM/: CMakeLists.txt  FuncToLLVM.cpp
lib/Conversion/KernelsToSODA/: AllToSODAPass.cpp  LinalgToSODA.cpp  OperationToSODA.cpp  SCFToSODA.cpp  SCFToSODAPass.cpp
lib/Conversion/LinalgToAccel/: AXI4MLIRUtils.cpp  CMakeLists.txt  LinalgGenericToAccel.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Accel/: CMakeLists.txt
lib/Dialect/Accel/IR/: AccelAttributes.cpp  AccelDialect.cpp  AccelOps.cpp  CMakeLists.txt  OpcodeExprDetail.h  OpcodeListDetail.h  OpcodeMapDetail.h
lib/Dialect/Affine/Transforms/: CMakeLists.txt  (+4 more)
lib/Dialect/Linalg/: CMakeLists.txt
lib/Dialect/SODA/: CMakeLists.txt
lib/Dialect/SparseTensor/: CMakeLists.txt
lib/ExecutionEngine/: CMakeLists.txt  SODARunnerExtensions.cpp
lib/ExecutionEngine/axi/: AxiUtils.cpp  AxiUtilsMock.cpp  AxiUtilsSysc.cpp  CMakeLists.txt
lib/ExecutionEngine/axi/api/: CMakeLists.txt  api_v0.cpp  api_v1.cpp  api_v1_sysc.cpp  api_v2.cpp  api_v2_sysc.cpp
lib/Misc/: AffineDataCopyGen.cpp  CMakeLists.txt  ForwardLinalgOps.cpp  FuncToLLVM.cpp  GenerateLinalgSummary.cpp  MemrefEraseDealloc.cpp  MiscPasses.cpp  PassDetail.h  PassDetailForFuncToLLVM.h
lib/Transforms/: CMakeLists.txt  ForwardResults.cpp  IfConversion.cpp  LoopSchedule.cpp  LoopScheduleBuilder.cpp  SchedulingUtils.cpp
llvm_plugins/lib/Transforms/: CMakeLists.txt
python/: CMakeLists.txt
python/mlir_soda/dialects/: SODAOps.td
python/mlir_soda/pytaco/: soda_pytaco_check.py
python/mlir_soda/taco/: mlir_pytaco_ext.py  pytaco_codegen.py  soda_sparse_compiler.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Analysis/: dfg-extraction.mlir
test/Analysis/linalg/: operation-info.mlir
test/Conversion/AccelToRunner/: .accel-to-runtime.mlir
test/Conversion/LinalgToLLVM/: lower-to-llvm.mlir
test/Conversion/TensorToLLVM/: tensor-to-llvm-with-one-shot.mlir
test/Dialect/Accel/: accel-dialect.mlir
test/Dialect/Affine/: fusion.mlir  tile.mlir  unroll.mlir
test/Dialect/Linalg/: forward-linalg-ops.mlir  tile.mlir
test/Dialect/Memref/: forward-memref-allocations.mlir
test/Dialect/SODA/: outlining.mlir  testbench-generation.mlir  xml-generation.mlir  xml-interface-generation.mlir
test/Dialect/SparseTensor/: InnerProd_no_par.mlir  InnerProd_par.mlir  MTTKRP.mlir  Reduce1D.mlir  Reduce2D_no_par.mlir  Reduce2D_par.mlir  SpMSpMAdd.mlir  SpMSpMMul.mlir  SpMVMul.mlir  SpTMMul.mlir  SpTVMul.mlir
test/Dialect/Transform/: affine-full-unroll.mlir  end-to-end.mlir  simple.mlir  transform-on-linalg.mlir
test/Runner/: matmul.mlir  sparse_conv_2d.mlir
test/Runner/SparseTensor/: dense_output.mlir  sparse_codegen_foreach.mlir  sparse_conv_2d.mlir  sparse_conversion.mlir  sparse_dot.mlir  sparse_file_io.mlir  sparse_scf_nested.mlir  sparse_sum.mlir
test/Transforms/: core  forward-results.mlir  if-conversion.mlir  schedule-loop-lb.mlir  schedule-loop-ub.mlir  schedule-loop.mlir  schedule.csv
test/axi4mlir-runner/: .run-axi-v1-data-copy.mlir
test/lib/Transforms/: CMakeLists.txt  TestDataFlowGraph.cpp  TestForwardResults.cpp  TestIfConversion.cpp  TestLoopSchedulingPass.cpp
test/llvm_plugin/: .vhls-rewriter.ll  alloca-namer.ll  vhls-rewriter.ll  xml-writer.ll
test/python/: simple-parse.py
test/python/pytaco/: SpMSpMMul.py  SpMVMul.py  lit.local.cfg
test/python/taco/: InnerProd.py  MTTKRP.py  Reduce1D.py  Reduce2D.py  SpMSpMAdd.py  SpMSpMMul.py  SpMVMul.py  SpTMMul.py  SpTVMul.py
test/soda-opt/: opt-matmul-for-bambu.mlir  opt-matmul.mlir  soda-opt.mlir
tools/: CMakeLists.txt
tools/mlir-runner/: CMakeLists.txt  mlir-runner.cpp
tools/soda-opt/: CMakeLists.txt  soda-opt.cpp
tools/soda-pytaco/: CMakeLists.txt  requirements.txt  soda-pytaco.py
(+136 files in other folders)
